# nnoir

./: .gitignore  Dockerfile  flake.nix  pyproject.toml
.circleci/: config.yml
blackonnx/: LICENCE  README.md  blackonnx  pyproject.toml  setup.py
blackonnx/blackonnx/: __init__.py  _version.py  main.py  onnx_utils.py  utils.py
blackonnx/blackonnx/fix/: __init__.py  common_fix.py  postprocess_fix.py  quantize_fix.py
blackonnx/blackonnxlib/: __init__.py
blackonnx/blackonnxlib/fix/: common_fix.py  postprocess_fix.py
blackonnx/dockerfiles/: Dockerfile
blackonnx/examples/: inference_test.py  tutorial.md
blackonnx/examples/models/: .gitignore  Makefile
blackonnx/test/: Makefile
chainer2mlir/: README.rst  setup.py
chainer2mlir/chainer/mlir/: __init__.py  (+4 more)
converter/: .gitignore  LICENSE.txt  MANIFEST.in  README.md  packageing.py  setup.py
converter/example/: example.py
converter/mlir/: converter.py
mlir/: .gitignore  README.md  mlir2dot  setup.py
mlir-chainer/: README.md  README.rst  setup.py
mlir-chainer/mlir_chainer/: __init__.py  configuration.py  graph.py  mlir_function.py  patch.py
mlir-onnx/: README.md  setup.py
mlir-onnx/mlir_onnx/: __init__.py  onnx.py
mlir/mlir/: __init__.py  load.py  mlir.py  node.py  value.py
mlir/test/: Add.mlir  AddConstant.mlir  AveragePooling2D.mlir  BatchNormalization.mlir  Bias.mlir  Bilinear2D.mlir  BroadcastTo.mlir  ClippedReLU.mlir  Concat.mlir  ConstantPadding.mlir  Convolution2D.mlir  DepthwiseConvolution2D.mlir  Dropout.mlir  ELU.mlir  LeakyReLU.mlir  Linear.mlir  LocalResponseNormalization.mlir  MaxPooling2D.mlir  Mul.mlir  MulConstant.mlir  ReLU.mlir  Reshape.mlir  Scale.mlir  Sigmoid.mlir  Softmax.mlir  Transpose.mlir  Unpooling2D.mlir  test_pack.py
mlir2chainer/: README.md  setup.py
mlir2chainer/mlir2chainer/: __init__.py  chainer_nn.py
nnoir/: README.md  nnoir2dot  nnrunner  pyproject.toml  setup.py
nnoir-chainer/: .gitignore  README.md  pyproject.toml  setup.py
nnoir-chainer/nnoir_chainer/: __init__.py  _version.py  configuration.py  graph.py  nnoir_function.py  patch.py
nnoir-chainer/test/: test_add.py  test_add_constant.py  test_average_pooling_2d.py  test_batch_normalization.py  test_clipped_relu.py  test_concat.py  test_convolution_2d.py  test_depthwise_convolution_2d.py  test_leaky_relu.py  test_linear.py  test_max_pooling_2d.py  test_mul.py  test_mul_constant.py  test_pad.py  test_reshape.py  test_scale.py  test_sigmoid.py  test_sub.py  test_swish.py  test_unpooling_2d.py
nnoir-onnx/: Dockerfile  README.md  freeze_onnx  onnx2nnoir  pyproject.toml  setup.py
nnoir-onnx/example/: .gitignore
nnoir-onnx/example/mobilenetv2/: Makefile
nnoir-onnx/example/super_resolution/: Makefile
nnoir-onnx/nnoir_onnx/: __init__.py  _version.py  freeze.py  onnx.py  onnx2nnoir.py  utils.py
nnoir-onnx/nnoir_onnx/operators/: __init__.py  add.py  average_pool.py  batch_normalization.py  clip.py  concat.py  conv.py  cos.py  deconv.py  div.py  dropout.py  elu.py  erf.py  exp.py  flatten.py  gather.py  gemm.py  global_average_pool.py  hard_sigmoid.py  hard_swish.py  leaky_relu.py  lrn.py  lstm.py  mat_mul.py  max_pool.py  mul.py  pad.py  pow.py  prelu.py  reduce_mean.py  reduce_sum.py  relu.py  reshape.py  resize.py  sigmoid.py  sin.py  slice.py  softmax.py  split.py  sqrt.py  (+9 more)
nnoir-onnx/test/: test_add.py  test_average_pooling_2d.py  test_batch_normalization.py  test_clip.py  test_concat.py  test_conv.py  test_cos.py  test_deconv.py  test_div.py  test_dropout.py  test_elu.py  test_erf.py  test_exp.py  test_flatten.py  test_gather.py  test_gemm.py  test_global_avearge_pooling.py  test_hard_sigmoid.py  test_hard_swish.py  test_leaky_relu.py  test_lrn.py  test_lstm.py  test_matmul.py  test_max_pooling.py  test_mul.py  test_pad.py  test_pow.py  test_prelu.py  test_reduce_mean.py  test_reduce_sum.py  test_relu.py  test_reshape.py  test_resize.py  test_sigmoid.py  test_sin.py  test_slice.py  test_softmax.py  test_split.py  test_sqrt.py  test_squeeze.py  (+8 more)
nnoir/nnoir/: __init__.py  _version.py  dot.py  load.py  metadata.py  nnoir.py  nntc.py  runner.py  value.py
nnoir/nnoir/functions/: __init__.py  add.py  add_constant.py  average_pooling_2d.py  batch_normalization.py  bias.py  bilinear_2d.py  broadcast.py  clipped_relu.py  concat.py  constant.py  convolution_2d.py  cos.py  deconvolution_2d.py  depthwise_convolution_2d.py  div.py  dropout.py  elu.py  erf.py  exp.py  fixed_batch_normalization.py  function.py  gemm.py  leaky_relu.py  linear.py  linear_function.py  local_response_normalization.py  lstm.py  matmul.py  max_pooling_2d.py  mul.py  mul_constant.py  pad.py  relu.py  reshape.py  resize_2d.py  scale.py  sigmoid.py  sin.py  slice.py  (+11 more)
nnoir/test/: Add.nnoir  AddConstant.nnoir  AveragePooling2D.nnoir  BatchNormalization.nnoir  Bias.nnoir  Bilinear2D.nnoir  Bilinear2D_align_centers.nnoir  Bilinear2D_align_corners.nnoir  Bilinear2D_align_none.nnoir  BroadcastTo.nnoir  ClippedReLU.nnoir  Concat.nnoir  ConstantPadding.nnoir  Convolution2D.nnoir  Cos.nnoir  Deconvolution2D.nnoir  DepthwiseConvolution2D.nnoir  Div.nnoir  Dropout.nnoir  ELU.nnoir  Erf.nnoir  Exp.nnoir  Gemm.nnoir  LeakyReLU.nnoir  Linear.nnoir  LocalResponseNormalization.nnoir  MatMul.nnoir  MaxPooling2D.nnoir  Mul.nnoir  MulConstant.nnoir  ReLU.nnoir  Reshape.nnoir  Resize2D.nnoir  Resize2D_linear.nnoir  Scale.nnoir  Sigmoid.nnoir  Sin.nnoir  Slice.nnoir  Softmax.nnoir  Sqrt.nnoir  (+9 more)
onnx2mlir/: README.md  onnx2mlir  setup.py
onnx2onnx/: LICENCE  README.md  fixonnx4nnoir  onnx2onnx  setup.py
onnx2onnx/examples/: tutorial.md
onnx2onnx/onnx2nnoirtools/: __init__.py  utils.py
onnx2onnx/onnx2onnxlib/: __init__.py  onnx_utils.py
onnx2onnx/test/: Makefile  test_conversion.sh
tools/: mlir_drawer.py
(+482 files in other folders)
