[tool.poetry]
name = "nnoir-onnx"
version = "1.5.0"
description = "ONNX to NNOIR Converter"
authors = ["Idein Inc."]
license = "MIT"
readme = "README.md"
keywords = ["nnoir", "onnx", "machine learning"]
repository = "https://github.com/Idein/nnoir/tree/master/nnoir-onnx"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1"
msgpack = "^1"
onnx = "<1.14.0"
onnxruntime = "^1.2.0"
protobuf = "^3.8"
importlib-metadata = "^4"
nnoir = "^1.3.0"

[tool.poetry.dev-dependencies]
pysen = {version = "^0.10.1"}
black = "22.3.0"
flake8 = "4.0.1"
flake8-bugbear = "21.9.2"
isort = "5.9.3"
mypy = "^1.0"
pytest = "^6.2.5"
nnoir = {path = "../nnoir/", develop = true }

[tool.poetry.scripts]
onnx2nnoir = "nnoir_onnx.onnx2nnoir:main"
freeze_onnx = "nnoir_onnx.freeze:freeze"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10.5"

[tool.pysen.lint]
enable_black = true
enable_flake8 = false  # disabled due to too many errors
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 128
py_version = "py39"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[tool.mypy]
[[tool.mypy.overrides]]
module = "onnx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "onnxruntime.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nnoir.*"
implicit_reexport = true

[[tool.mypy.overrides]]
module = "nnoir_onnx.*"
implicit_reexport = true
