[tool.poetry]
name = "nnoir"
version = "1.1.0"
description = "API for NNOIR"
authors = ["Idein Inc."]
license = "MIT"
readme = "README.md"
keywords = ["nnoir", "machine learning"]
repository = "https://github.com/Idein/nnoir/tree/master/nnoir"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1"
msgpack = "^1"
importlib-metadata = "^4"

[tool.poetry.dev-dependencies]
pysen = { git = "https://github.com/pfnet/pysen.git", rev = "7d88ecc7b5af83681315640a00852ff51531eda6" }
black = "22.3.0"
flake8 = "4.0.1"
flake8-bugbear = "21.9.2"
isort = "5.9.3"
mypy = "^1.0"
pytest = "^6.2.5"

[tool.poetry.scripts]
nnoir2dot = "nnoir.dot:nnoir2dot"
nnrunner = "nnoir.runner:main"
nnoir-metadata = "nnoir.metadata:nnoir_metadata"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10.3"

[tool.pysen.lint]
enable_black = true
enable_flake8 = false  # disabled due to too many errors
enable_isort = true
enable_mypy = true    # disabled currently
mypy_preset = "strict"
line_length = 128
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
